--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "boilerplate-base",
+  "name": "grafana-annotations",
   "description": "This project is just a template for creation of new projects",
   "version": "0.0.0",
-  "private": true,
   "author": {
     "name": "Thiago O Santos <tos.oliveira@gmail.com>"
   },
@@ -52,6 +51,13 @@
     "collectCoverageFrom": [
       "./src/**/*.ts"
     ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80
+      }
+    },
     "testEnvironment": "node",
     "setupFilesAfterEnv": [
       "./test/jest-setup.ts"
@@ -62,17 +68,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/codibre/boilerplate-base.git"
+    "url": "https://github.com/maxmilhas-org/nodejs-grafana-annotations.git"
   },
-  "homepage": "https://github.com/codibre/boilerplate-base#readme",
+  "homepage": "https://github.com/maxmilhas-org/nodejs-grafana-annotations#readme",
   "bugs": {
-    "url": "https://github.com/codibre/boilerplate-base/issues"
+    "url": "https://github.com/maxmilhas-org/nodejs-grafana-annotations/issues"
   },
   "keywords": [],
   "license": "MIT",
   "devDependencies": {
     "@codibre/confs": "^1.1.2",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^28.1.4",
+    "@types/superagent": "^4.1.15",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "del-cli": "^3.0.1",
@@ -84,6 +91,7 @@
     "jest": "^27.5.1",
     "jest-callslike": "^0.2.0",
     "jest-extended": "^2.0.0",
+    "jest-stub-super-constructor": "^0.3.0",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.7",
@@ -92,5 +100,10 @@
     "typedoc-plugin-markdown": "^3.12.1",
     "typescript": "^4.5.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@codibre/fluent-iterable": "^1.24.0",
+    "read-pkg": "^5.0.0",
+    "superagent": "*",
+    "ts-base-http-client": "^0.1.0"
+  }
 }
