--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   "devDependencies": {
     "@codibre/confs": "^1.1.2",
     "@types/jest": "^28.1.4",
+    "@types/json-diff": "^0.7.0",
     "@types/superagent": "^4.1.15",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
@@ -112,6 +113,7 @@
   },
   "dependencies": {
     "@codibre/fluent-iterable": "^1.24.0",
+    "json-diff": "^0.9.0",
     "read-pkg": "^5.0.0",
     "superagent": "*",
     "uuid": "^8.3.2"
