--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "license": "MIT",
   "devDependencies": {
     "@codibre/confs": "^1.1.2",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^28.1.4",
     "@types/json-diff": "^0.7.0",
     "@types/superagent": "^4.1.15",
@@ -113,6 +114,8 @@
   },
   "dependencies": {
     "@codibre/fluent-iterable": "^1.24.0",
+    "@remembered/redis": "*",
+    "ioredis": "*",
     "json-diff": "^0.9.0",
     "read-pkg": "^5.0.0",
     "superagent": "*",
